# tobyj-demo-app

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yaml  ci.yaml  rebase_checker.yaml  release.yaml
requirements/: dev.in  dev.txt  main.txt  tox.txt
src/tobyjdemoapp/: __init__.py  config.py  main.py  models.py
src/tobyjdemoapp/handlers/: external.py  internal.py
tests/: conftest.py
tests/handlers/: external_test.py  internal_test.py
